<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
      <groupId>uk.gov.companieshouse</groupId>
      <artifactId>companies-house-parent</artifactId>
      <version>2.1.11</version>
   </parent>
   <groupId>uk.gov.companieshouse</groupId>
   <artifactId>services-dashboard-api</artifactId>
   <version>unversioned</version>
   <name>services-dashboard-api</name>
   <description>Services Dashboard API</description>

   <properties>
      <java.version>21</java.version>

      <log4j.version>2.24.3</log4j.version>
      <structured-logging.version>2.0.3</structured-logging.version>
      <jackson-databind.version>2.18.2</jackson-databind.version>
      <org.mapstruct.version>1.6.3</org.mapstruct.version>
      <spring-boot-dependencies.version>3.4.1</spring-boot-dependencies.version>

      <spring-boot-maven-plugin.version>3.4.1</spring-boot-maven-plugin.version>
      <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
      <maven-assembly-plugin.version>3.2.0</maven-assembly-plugin.version>
      <!-- <maven-shade-plugin.version>3.6.0</maven-shade-plugin.version> -->

      <!-- <sonar.java.binaries>${project.basedir}/target,${project.basedir}/target/*</sonar.java.binaries>
      <sonar-maven-plugin.version>5.0.0.4389</sonar-maven-plugin.version> -->

      <aws.java.sdk.version>2.29.36</aws.java.sdk.version>
      <aws.lambda.core.version>1.2.2</aws.lambda.core.version>
      <aws.lambda.events.version>3.11.0</aws.lambda.events.version>

      <aws.spring.adapter.version>4.2.0</aws.spring.adapter.version>

      <aws.java.ssm.version>2.29.35</aws.java.ssm.version>
   </properties>

   <profiles>
      <profile>
            <id>local</id>
            <build>
               <plugins>
                  <!-- Package -->
                  <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
                     <version>${spring-boot-maven-plugin.version}</version>
                     <configuration>
                        <mainClass>uk.gov.companieshouse.servicesdashboardapi.ServicesDashboardApiApplication</mainClass>
                     </configuration>
                     <executions>
                        <execution>
                              <goals>
                                 <goal>repackage</goal>
                              </goals>
                        </execution>
                     </executions>
                  </plugin>
               </plugins>
            </build>
      </profile>
      <profile>
            <id>lambda</id>
            <activation>
               <activeByDefault>true</activeByDefault>
            </activation>
            <dependencies>
                  <dependency>
                        <groupId>com.amazonaws</groupId>
                        <artifactId>aws-lambda-java-core</artifactId>
                        <version>${aws.lambda.core.version}</version>
                  </dependency>
                  <dependency>
                        <groupId>com.amazonaws</groupId>
                        <artifactId>aws-lambda-java-events</artifactId>
                        <version>${aws.lambda.events.version}</version>
                  </dependency>
                   <!-- Spring Cloud Function Adapter for AWS Lambda -->
                  <dependency>
                     <groupId>org.springframework.cloud</groupId>
                     <artifactId>spring-cloud-function-adapter-aws</artifactId>
                     <version>${aws.spring.adapter.version}</version>
                  </dependency>
            </dependencies>
            <build>
               <plugins>
                  <!-- Package -->
                  <!-- <plugin>
                        <groupId>org.springframework.boot</groupId>
                        <artifactId>spring-boot-maven-plugin</artifactId>
                        <version>${spring-boot-maven-plugin.version}</version>
                        <configuration>
                           <layers>false</layers>
                        </configuration>
                  </plugin> -->
                  <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-assembly-plugin</artifactId>
                     <version>${maven-assembly-plugin.version}</version>
                     <configuration>
                        <!-- get all project dependencies -->
                        <descriptorRefs>
                              <descriptorRef>jar-with-dependencies</descriptorRef>
                        </descriptorRefs>
                        <archive>
                        <!-- needed for runnable JAR -->
                        <manifest>
                            <mainClass>uk.gov.companieshouse.servicesdashboardapi.ServicesDashboardApiApplication</mainClass>
                        </manifest>
                    </archive>
                     </configuration>
                     <executions>
                        <execution>
                              <id>make-assembly</id>
                              <!-- bind to the packaging phase -->
                              <phase>package</phase>
                              <goals>
                                 <goal>single</goal>
                              </goals>
                        </execution>
                     </executions>
                  </plugin>
               </plugins>
            </build>
      </profile>
      <!-- <profile>
            <id>sonar-pr-analysis</id>
            <properties>
               <sonar.pullrequest.base>main</sonar.pullrequest.base>
            </properties>
      </profile> -->

   </profiles>

   <repositories>
      <repository>
            <id>centralOri</id>
            <url>https://repo.maven.apache.org/maven2</url>
      </repository>
   </repositories>

   <dependencyManagement>
      <dependencies>
            <dependency>
               <groupId>org.apache.logging.log4j</groupId>
               <artifactId>log4j-bom</artifactId>
               <version>${log4j.version}</version>
               <scope>import</scope>
               <type>pom</type>
            </dependency>
            <dependency>
               <groupId>org.springframework.boot</groupId>
               <artifactId>spring-boot-dependencies</artifactId>
               <version>${spring-boot-dependencies.version}</version>
               <type>pom</type>
               <scope>import</scope>
            </dependency>
            <dependency>
                  <groupId>software.amazon.awssdk</groupId>
                  <artifactId>bom</artifactId>
                  <version>${aws.java.sdk.version}</version>
                  <type>pom</type>
                  <scope>import</scope>
            </dependency>
      </dependencies>
   </dependencyManagement>

   <dependencies>
      <!-- Spring * (start)-->
      <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
      </dependency>
      <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
      </dependency>
      <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
            <exclusions>
               <exclusion>
                  <groupId>com.vaadin.external.google</groupId>
                  <artifactId>android-json</artifactId>
               </exclusion>
            </exclusions>
      </dependency>
      <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-mongodb</artifactId>
      </dependency>
      <!-- Spring * (end)-->

      <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>${org.mapstruct.version}</version>
      </dependency>

      <dependency>
            <groupId>uk.gov.companieshouse</groupId>
            <artifactId>structured-logging</artifactId>
            <version>${structured-logging.version}</version>
            <exclusions>
               <exclusion>
                  <groupId>org.slf4j</groupId>
                  <artifactId>slf4j-simple</artifactId>
               </exclusion>
            </exclusions>
      </dependency>

      <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson-databind.version}</version>
      </dependency>


      <!-- AWS dependencies -->
      <!-- <dependency>
            <groupId>software.amazon.awssdk</groupId>
            <artifactId>ecs</artifactId>
            <version>${aws.java.sdk.version}</version>
      </dependency> -->

      <dependency>
            <groupId>software.amazon.awssdk</groupId>
            <artifactId>ssm</artifactId>
            <version>${aws.java.ssm.version}</version>
      </dependency>

      <!-- Unit test -->
      <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-inline</artifactId>
            <version>5.2.0</version>
            <scope>test</scope>
      </dependency>

      <!-- Sonar -->
      <!-- <dependency>
            <groupId>org.sonarsource.scanner.maven</groupId>
            <artifactId>sonar-maven-plugin</artifactId>
            <version>${sonar-maven-plugin.version}</version>
            <scope>test</scope>
      </dependency> -->

   </dependencies>

   <build>
      <plugins>
            <!-- Compile -->
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-compiler-plugin</artifactId>
               <version>${maven-compiler-plugin.version}</version>
               <configuration>
                  <source>${java.version}</source>
                  <target>${java.version}</target>
                  <annotationProcessorPaths>
                        <path>
                           <groupId>org.mapstruct</groupId>
                           <artifactId>mapstruct-processor</artifactId>
                           <version>${org.mapstruct.version}</version>
                        </path>
                  </annotationProcessorPaths>
               </configuration>
            </plugin>

      </plugins>
   </build>
</project>
